# uplift

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
manifest/: SCHEMA.md  anticheat.json  changelogs.json  dll-releases.json
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: background.rs  bench.rs  commands.rs  db.rs  dll.rs  downloads.rs  indicator.rs  lib.rs  main.rs  models.rs  presets.rs  remote.rs  swap.rs
src-tauri/src/scanners/: battlenet.rs  epic.rs  gog.rs  mod.rs  steam.rs  ubisoft.rs  xbox.rs
src-tauri/tests/: pipeline.rs  presets.rs
src/lib/: api.ts  stores.svelte.ts  types.ts  updater.svelte.ts
src/lib/components/: ActivityView.svelte  GameCard.svelte  GameDetail.svelte  LibraryView.svelte  ReleasesView.svelte  SettingsView.svelte  Sidebar.svelte  Splash.svelte  Toasts.svelte  VersionRail.svelte
