[package]
name = "uplift"
version = "0.2.0"
description = "Uplift — DLSS / FSR / XeSS DLL manager with update notifications, changelogs and safe auto-updates"
edition = "2021"
license = "GPL-3.0-only"
repository = "https://github.com/JorreFog/uplift"

[lib]
name = "uplift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
sysinfo = "0.30"
pelite = "0.10"
zip = "0.6"
walkdir = "2"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
libloading = "0.8"

[profile.release]
lto = true
opt-level = "s"
strip = true
